--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -42,53 +42,7 @@
             </connections>
             <point key="canvasLocation" x="436" y="250.5"/>
         </tableCellView>
-        <tableCellView identifier="c" id="toe-NG-Bn9" userLabel="c">
-            <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <button translatesAutoresizingMaskIntoConstraints="NO" id="YBc-RN-b4y">
-                    <rect key="frame" x="-3" y="-5" width="177" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="19" id="KSu-Ra-wRy"/>
-                    </constraints>
-                    <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" alignment="left" controlSize="small" state="on" inset="2" id="yY3-6y-7Tr">
-                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="smallSystem"/>
-                    </buttonCell>
-                    <connections>
-                        <binding destination="toe-NG-Bn9" name="enabled" keyPath="objectValue.isEditable" id="iuy-IZ-0z5"/>
-                        <binding destination="toe-NG-Bn9" name="value" keyPath="objectValue.value" id="LhJ-cI-8Fo"/>
-                    </connections>
-                </button>
-            </subviews>
-            <constraints>
-                <constraint firstItem="YBc-RN-b4y" firstAttribute="top" secondItem="toe-NG-Bn9" secondAttribute="top" id="KpZ-An-sAt"/>
-                <constraint firstAttribute="trailing" secondItem="YBc-RN-b4y" secondAttribute="trailing" id="WAZ-eH-0YJ"/>
-                <constraint firstItem="YBc-RN-b4y" firstAttribute="leading" secondItem="toe-NG-Bn9" secondAttribute="leading" id="WrL-bb-Q9Q"/>
-            </constraints>
-            <point key="canvasLocation" x="436" y="332.5"/>
-        </tableCellView>
-        <tableCellView identifier="color" id="Nhn-ML-Yi0" userLabel="color">
-            <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <colorWell translatesAutoresizingMaskIntoConstraints="NO" id="7B1-9n-jPd" customClass="ColorWell">
-                    <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
-                    <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <connections>
-                        <binding destination="Nhn-ML-Yi0" name="value" keyPath="objectValue.value" id="i5v-Q3-TQ6"/>
-                    </connections>
-                </colorWell>
-            </subviews>
-            <constraints>
-                <constraint firstAttribute="trailing" secondItem="7B1-9n-jPd" secondAttribute="trailing" id="aDq-8h-cuf"/>
-                <constraint firstItem="7B1-9n-jPd" firstAttribute="top" secondItem="Nhn-ML-Yi0" secondAttribute="top" id="jpO-mr-ASZ"/>
-                <constraint firstItem="7B1-9n-jPd" firstAttribute="leading" secondItem="Nhn-ML-Yi0" secondAttribute="leading" id="rOd-Rc-tv7"/>
-                <constraint firstAttribute="bottom" secondItem="7B1-9n-jPd" secondAttribute="bottom" id="uxa-2X-XDO"/>
-            </constraints>
-            <point key="canvasLocation" x="726" y="371.5"/>
-        </tableCellView>
-        <tableCellView identifier="dd" id="GbV-qK-Vp4" userLabel="dd" customClass="TableCellView">
+        <tableCellView identifier="\{[^=]*=dd\}" id="GbV-qK-Vp4" userLabel="dd" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -168,7 +122,7 @@
             </connections>
             <point key="canvasLocation" x="436" y="428"/>
         </tableCellView>
-        <tableCellView identifier="dddd" id="dHV-ME-csG" userLabel="dddd" customClass="TableCellView">
+        <tableCellView identifier="\{[^=]*=\{[^=]*=dd\}\{[^=]*=dd\}\}" id="dHV-ME-csG" userLabel="dddd" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -316,27 +270,52 @@
             </connections>
             <point key="canvasLocation" x="726" y="274"/>
         </tableCellView>
-        <customView id="dob-0O-PCo" userLabel="Error">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="54"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+        <tableCellView identifier="c" id="toe-NG-Bn9" userLabel="c">
+            <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="glV-MS-jQN">
-                    <rect key="frame" x="18" y="20" width="64" height="14"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Error" id="DY0-eW-vjs">
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="YBc-RN-b4y">
+                    <rect key="frame" x="-3" y="-5" width="177" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="19" id="KSu-Ra-wRy"/>
+                    </constraints>
+                    <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" alignment="left" controlSize="small" state="on" inset="2" id="yY3-6y-7Tr">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
+                    </buttonCell>
+                    <connections>
+                        <binding destination="toe-NG-Bn9" name="enabled" keyPath="objectValue.isEditable" id="iuy-IZ-0z5"/>
+                        <binding destination="toe-NG-Bn9" name="value" keyPath="objectValue.value" id="LhJ-cI-8Fo"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
-                <constraint firstItem="glV-MS-jQN" firstAttribute="leading" secondItem="dob-0O-PCo" secondAttribute="leading" constant="20" symbolic="YES" id="ASq-hc-aMH"/>
-                <constraint firstAttribute="trailing" secondItem="glV-MS-jQN" secondAttribute="trailing" constant="20" symbolic="YES" id="DQC-9A-iQj"/>
-                <constraint firstAttribute="bottom" secondItem="glV-MS-jQN" secondAttribute="bottom" constant="20" symbolic="YES" id="II6-d8-FXe"/>
-                <constraint firstItem="glV-MS-jQN" firstAttribute="top" secondItem="dob-0O-PCo" secondAttribute="top" constant="20" symbolic="YES" id="jsN-Nn-KA1"/>
+                <constraint firstItem="YBc-RN-b4y" firstAttribute="top" secondItem="toe-NG-Bn9" secondAttribute="top" id="KpZ-An-sAt"/>
+                <constraint firstAttribute="trailing" secondItem="YBc-RN-b4y" secondAttribute="trailing" id="WAZ-eH-0YJ"/>
+                <constraint firstItem="YBc-RN-b4y" firstAttribute="leading" secondItem="toe-NG-Bn9" secondAttribute="leading" id="WrL-bb-Q9Q"/>
             </constraints>
-            <point key="canvasLocation" x="436" y="524"/>
-        </customView>
+            <point key="canvasLocation" x="436" y="332.5"/>
+        </tableCellView>
+        <tableCellView identifier="color" id="Nhn-ML-Yi0" userLabel="color">
+            <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <colorWell translatesAutoresizingMaskIntoConstraints="NO" id="7B1-9n-jPd" customClass="ColorWell">
+                    <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
+                    <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <connections>
+                        <binding destination="Nhn-ML-Yi0" name="value" keyPath="objectValue.value" id="i5v-Q3-TQ6"/>
+                    </connections>
+                </colorWell>
+            </subviews>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="7B1-9n-jPd" secondAttribute="trailing" id="aDq-8h-cuf"/>
+                <constraint firstItem="7B1-9n-jPd" firstAttribute="top" secondItem="Nhn-ML-Yi0" secondAttribute="top" id="jpO-mr-ASZ"/>
+                <constraint firstItem="7B1-9n-jPd" firstAttribute="leading" secondItem="Nhn-ML-Yi0" secondAttribute="leading" id="rOd-Rc-tv7"/>
+                <constraint firstAttribute="bottom" secondItem="7B1-9n-jPd" secondAttribute="bottom" id="uxa-2X-XDO"/>
+            </constraints>
+            <point key="canvasLocation" x="726" y="371.5"/>
+        </tableCellView>
         <viewController id="Nuf-d3-4cB" userLabel="Popover View Controller">
             <connections>
                 <outlet property="view" destination="dob-0O-PCo" id="RaA-5a-Wi5"/>
@@ -347,7 +326,7 @@
                 <outlet property="contentViewController" destination="Nuf-d3-4cB" id="dDf-N7-ObG"/>
             </connections>
         </popover>
-        <tableCellView identifier="I" id="a61-EY-A6P" userLabel="I" customClass="TableCellView">
+        <tableCellView identifier="[islqISLQ]" id="a61-EY-A6P" userLabel="integer" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -384,6 +363,27 @@
             </connections>
             <point key="canvasLocation" x="726" y="453.5"/>
         </tableCellView>
+        <customView id="dob-0O-PCo" userLabel="Error">
+            <rect key="frame" x="0.0" y="0.0" width="100" height="54"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="glV-MS-jQN">
+                    <rect key="frame" x="18" y="20" width="64" height="14"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Error" id="DY0-eW-vjs">
+                        <font key="font" metaFont="smallSystem"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+            </subviews>
+            <constraints>
+                <constraint firstItem="glV-MS-jQN" firstAttribute="leading" secondItem="dob-0O-PCo" secondAttribute="leading" constant="20" symbolic="YES" id="ASq-hc-aMH"/>
+                <constraint firstAttribute="trailing" secondItem="glV-MS-jQN" secondAttribute="trailing" constant="20" symbolic="YES" id="DQC-9A-iQj"/>
+                <constraint firstAttribute="bottom" secondItem="glV-MS-jQN" secondAttribute="bottom" constant="20" symbolic="YES" id="II6-d8-FXe"/>
+                <constraint firstItem="glV-MS-jQN" firstAttribute="top" secondItem="dob-0O-PCo" secondAttribute="top" constant="20" symbolic="YES" id="jsN-Nn-KA1"/>
+            </constraints>
+            <point key="canvasLocation" x="436" y="524"/>
+        </customView>
     </objects>
     <resources>
         <image name="AltDecreaseStepper" width="11" height="13"/>
